// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EstimateCost - Strong Item render basic props 1`] = `
<DocumentFragment>
  .cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1d9gk6m-OverlayContainer {
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0px;
  height: 120px;
  background-color: #ffffff;
  margin: 0 0 0 260px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  -webkit-transition: bottom 0.3s,box-shadow 0.3s;
  transition: bottom 0.3s,box-shadow 0.3s;
}

.cache-lxo6w7-List {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  list-style: none;
  margin: 0;
  padding: 24px 0;
}

.cache-15sn1rs-OverlayRow {
  min-width: 200px;
  padding: 0 24px;
  border-left: 1px solid #d9dadd;
  border: 0;
}

.cache-15sn1rs-OverlayRow:first-of-type,
.cache-15sn1rs-OverlayRow:last-child {
  border: 0;
}

.cache-4d2pis-Cell-Cell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-gy0d8m {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1odwddd {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-2sj51q-StyledResourceName-StyledResourceName {
  text-align: initial;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-swljnq-StyledRegular-StyledStrong {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.cache-upbfm5-OverlayRow {
  min-width: 200px;
  padding: 0 24px;
  border-left: 1px solid #d9dadd;
}

.cache-upbfm5-OverlayRow:first-of-type,
.cache-upbfm5-OverlayRow:last-child {
  border: 0;
}

.cache-9bqyx6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6qg2f3-sizeStyles {
  vertical-align: middle;
  fill: #641cb3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-6qg2f3-sizeStyles .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.cache-11xji2n-ItemResourceName {
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-12uv9zd-StyledRegular-StyledStrong {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 24px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.cache-l49cjj-StyledTable-spacedChildren {
  width: 100%;
  border: 1px solid #d9dadd;
  border-radius: 4px 4px 0 4px;
}

.cache-l49cjj-StyledTable-spacedChildren>* {
  margin-top: 0;
}

.cache-l49cjj-StyledTable-spacedChildren>*+* {
  margin-top: 16px;
}

.cache-d78yft-PriceCol {
  background-color: #ffffff;
}

.cache-gy9ug9-Title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin: 0;
  font-size: 18px;
  color: #3f4250;
  font-weight: 500;
  padding: 16px;
}

.cache-1c6bnf8-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #641cb3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-right: 8px;
}

.cache-1c6bnf8-sizeStyles-StyledIcon .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.cache-x833v6-StyledPriceCell-Cell-StyledPriceCell-PriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-left: 1px solid #d9dadd;
  background-color: #f9f9fa;
  padding: 0;
}

.cache-1e9mbjr-TimeCell {
  max-width: 200px;
  padding: 16px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  text-align: left;
  float: right;
}

.cache-e8qtir {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-igijr9-CustomTextInput input {
  border-radius: 4px 0 0 4px;
  min-width: 60px;
  border-right: 0;
}

.cache-igijr9-CustomTextInput input:hover,
.cache-igijr9-CustomTextInput input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-right-width: 1px;
  border-right-style: solid;
  border-color: #521094;
}

.cache-igijr9-CustomTextInput input[type='number']::-webkit-inner-spin-button,
.cache-igijr9-CustomTextInput input[type='number']::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-igijr9-CustomTextInput input[type='number'] {
  -moz-appearance: textfield;
}

.cache-bjn8wh {
  position: relative;
}

.cache-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze:hover,
.cache-1ehejze:focus {
  border-color: #792dd4;
}

.cache-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ehejze::-moz-placeholder {
  opacity: 1;
}

.cache-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ehejze::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput {
  width: 100%;
  position: relative;
  box-sizing: border-box;
  height: 40px;
  height: 40px;
}

.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:hover,
.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #521094;
  box-shadow: none;
}

.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:hover,
.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #521094;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-zhj3xq-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  background-color: #ffffff;
  border-color: #d9dadd;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  box-sizing: border-box;
  color: #3f4250;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-zhj3xq-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-zhj3xq-control:focus-within {
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-zhj3xq-control:hover {
  border-color: #792dd4;
}

.cache-1827o3p-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  padding: 2px 8px;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-1827o3p-ValueContainer label {
  display: none;
}

.cache-110bzf5 {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #3f4250;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
  -webkit-transform: translate(0, -8px) scale(0.8);
  -moz-transform: translate(0, -8px) scale(0.8);
  -ms-transform: translate(0, -8px) scale(0.8);
  transform: translate(0, -8px) scale(0.8);
  transform-origin: left;
  padding-left: 8px;
  left: 0;
  top: 2px;
  opacity: 1;
}

.cache-1deka0w-singleValue {
  grid-area: 1/1/2/3;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #3f4250;
  margin-left: 0;
  margin-right: 0;
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1xwier8-inputStyles {
  visibility: visible;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1xwier8-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-dh2bvv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 1px;
  background-color: #d9dadd;
  margin-bottom: 8px;
  margin-top: 8px;
  box-sizing: border-box;
  display: none;
}

.cache-1xc3v61-indicatorContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  color: hsl(0, 0%, 80%);
  padding: 8px;
  box-sizing: border-box;
}

.cache-1xc3v61-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-znppnv {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-znppnv .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-19b723i-Cell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
}

.cache-1meok3w-StyledLeftSide {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 56px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-12tubxd-StyledResourceName {
  text-align: right;
}

.cache-4laor4-StyledRegular-StyledStrong {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.cache-np418x-Cell-StyledPriceCell-PriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-left: 1px solid #d9dadd;
  background-color: #f9f9fa;
}

.cache-1xemy00-StyleNoPriceItem {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

.cache-1k8mic4-EmptyTable {
  margin: 0;
  width: 100%;
}

.cache-wpkagv-EmptyCell {
  width: 538px;
}

.cache-12u8ruk-Cell-TotalPriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-color: #d9dadd;
  border-style: solid;
  border-width: 0 1px 1px 1px;
  border-radius: 0 0 4px 4px;
  min-width: 202px;
  height: 56px;
  background-color: #f1eefc;
}

.cache-yw3y7k-StyledText {
  color: #641cb3;
  font-size: 25px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

<div
    class="cache-1t7ypwa ehpbis70"
  >
    <div
      class="cache-1d9gk6m-OverlayContainer e1p62vjs2"
      data-testid="summary-overlay"
    >
      <ul
        class="cache-lxo6w7-List e1p62vjs1"
      >
        <li
          class="cache-15sn1rs-OverlayRow e1xb5k8j3"
        >
          <div
            class="cache-4d2pis-Cell-Cell e1kzy2rr8"
            width="inherit"
          >
            <div>
              <div
                class="cache-77g8v1 ehpbis70"
              >
                <div
                  class="cache-gy0d8m ehpbis70"
                >
                  <p
                    class="cache-1odwddd e13y3mga0"
                  >
                    Strong
                  </p>
                </div>
              </div>
              <div
                class="cache-2sj51q-StyledResourceName-StyledResourceName e1kzy2rr7"
              >
                <div
                  class="e1bhvxf60 cache-swljnq-StyledRegular-StyledStrong e1l9k4qo0"
                >
                  This is a strong Item
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class="cache-upbfm5-OverlayRow e1xb5k8j3"
        >
          <div
            class="cache-9bqyx6 ehpbis70"
          >
            <svg
              class="cache-6qg2f3-sizeStyles e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10 1c-1.716 0-3.408.106-5.07.31A2.213 2.213 0 0 0 3 3.517V16.75A2.25 2.25 0 0 0 5.25 19h9.5A2.25 2.25 0 0 0 17 16.75V3.517c0-1.103-.806-2.068-1.93-2.207A41 41 0 0 0 10 1M5.99 8.75A.75.75 0 0 1 6.74 8h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.417-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.42-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zM12.5 8.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm0 2.166a.75.75 0 0 1 .75.75v2.167a.75.75 0 1 1-1.5 0v-2.167a.75.75 0 0 1 .75-.75M6.75 4a.75.75 0 0 0-.75.75v.5c0 .414.336.75.75.75h6.5a.75.75 0 0 0 .75-.75v-.5a.75.75 0 0 0-.75-.75z"
                fill-rule="evenodd"
              />
            </svg>
            Estimated cost
          </div>
          <div
            class="cache-11xji2n-ItemResourceName e1xb5k8j1"
          >
            <div
              class="e1bhvxf60 cache-12uv9zd-StyledRegular-StyledStrong e1l9k4qo0"
            >
              <span
                class="cache-1bp6ks2-LineThrough e1d1k6i0"
              >
                €0.00/Hour(s)
              </span>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="cache-1odwddd e13y3mga0"
    >
      This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
    </span>
    <div>
      <table
        cellpadding="0"
        cellspacing="0"
        class="cache-l49cjj-StyledTable-spacedChildren e1xb5k8j14"
        data-testid="summary"
      >
        <colgroup>
          <col />
          <col
            class="cache-d78yft-PriceCol e1xb5k8j12"
          />
        </colgroup>
        <thead>
          <tr>
            <th>
              <h3
                class="cache-gy9ug9-Title e1xb5k8j8"
              >
                <svg
                  class="excc3v71 cache-1c6bnf8-sizeStyles-StyledIcon e1gt4cfo0"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 1c-1.716 0-3.408.106-5.07.31A2.213 2.213 0 0 0 3 3.517V16.75A2.25 2.25 0 0 0 5.25 19h9.5A2.25 2.25 0 0 0 17 16.75V3.517c0-1.103-.806-2.068-1.93-2.207A41 41 0 0 0 10 1M5.99 8.75A.75.75 0 0 1 6.74 8h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.417-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.42-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zM12.5 8.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm0 2.166a.75.75 0 0 1 .75.75v2.167a.75.75 0 1 1-1.5 0v-2.167a.75.75 0 0 1 .75-.75M6.75 4a.75.75 0 0 0-.75.75v.5c0 .414.336.75.75.75h6.5a.75.75 0 0 0 .75-.75v-.5a.75.75 0 0 0-.75-.75z"
                    fill-rule="evenodd"
                  />
                </svg>
                Estimated cost
              </h3>
            </th>
            <th
              class="cache-x833v6-StyledPriceCell-Cell-StyledPriceCell-PriceCell excc3v70"
            >
              <div
                class="cache-1e9mbjr-TimeCell e1xb5k8j6"
              >
                <div
                  class="cache-e8qtir e3f5lzv0"
                >
                  <div
                    class="cache-igijr9-CustomTextInput epio27v1"
                  >
                    <div
                      class="cache-bjn8wh el3h3g95"
                    >
                      <input
                        autocomplete="on"
                        class="cache-1ehejze el3h3g92"
                        max="99999"
                        min="1"
                        name="iteration-value"
                        placeholder="0"
                        style="height: 40px;"
                        type="number"
                        value="1"
                      />
                    </div>
                    <div
                      class="cache-1lt3r2p e5hc7t70"
                    >
                      <div
                        class="cache-xbtm7g el3h3g94"
                      />
                    </div>
                  </div>
                  <div
                    class="epio27v0 epio27v0 cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput e11gt5pw4"
                    data-testid="select-input-iteration-unit"
                  >
                    <span
                      class="cache-1f43avz-a11yText-A11yText"
                      id="react-select-2-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="cache-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      class=" cache-zhj3xq-control"
                    >
                      <div
                        class=" cache-1827o3p-ValueContainer"
                      >
                        <label
                          aria-live="assertive"
                          as="label"
                          class="cache-110bzf5 e11gt5pw2"
                          for=":r3:"
                        >
                          Select...
                        </label>
                        <div
                          class=" cache-1deka0w-singleValue"
                        >
                          Hour(s)
                        </div>
                        <div
                          class="cache-1xwier8-inputStyles"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id=":r3:"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" cache-ralm3g-IndicatorsContainer"
                      >
                        <span
                          class=" cache-dh2bvv-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" cache-1xc3v61-indicatorContainer"
                        >
                          <div
                            class="cache-9bqyx6 ehpbis70"
                          >
                            <svg
                              class="cache-znppnv e1gt4cfo0"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <input
                      name="iteration-unit"
                      type="hidden"
                      value="hours"
                    />
                    <div
                      class="cache-1lt3r2p e5hc7t70"
                    >
                      <div
                        class="cache-xbtm7g e11gt5pw3"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="cache-11ls5i6-StyledTr e1xb5k8j4"
          >
            <td
              class="cache-19b723i-Cell e1xb5k8j11"
              width="530px"
            >
              <div
                class="cache-1meok3w-StyledLeftSide e1xb5k8j2"
              >
                <div
                  class="cache-77g8v1 ehpbis70"
                >
                  <div
                    class="cache-gy0d8m ehpbis70"
                  >
                    <p
                      class="cache-1odwddd e13y3mga0"
                    >
                      Strong
                    </p>
                  </div>
                </div>
                <div
                  class="cache-12tubxd-StyledResourceName e1kzy2rr7"
                >
                  <div
                    class="e1bhvxf60 cache-4laor4-StyledRegular-StyledStrong e1l9k4qo0"
                  >
                    This is a strong Item
                  </div>
                </div>
              </div>
            </td>
            <td
              class="cache-np418x-Cell-StyledPriceCell-PriceCell e1kzy2rr1"
            >
              <p
                class="e1kzy2rr0 cache-1xemy00-StyleNoPriceItem e13y3mga0"
              >
                €0.00
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        cellpadding="0"
        cellspacing="0"
        class="cache-1k8mic4-EmptyTable e1xb5k8j9"
      >
        <colgroup>
          <col />
          <col
            class="cache-d78yft-PriceCol e1xb5k8j12"
          />
        </colgroup>
        <tbody>
          <tr>
            <td
              aria-label="control"
              class="cache-wpkagv-EmptyCell e1xb5k8j7"
            />
            <td
              class="cache-12u8ruk-Cell-TotalPriceCell e1xb5k8j10"
            >
              <h3
                class="excc3v73 cache-yw3y7k-StyledText e13y3mga0"
              >
                <span
                  class="cache-1bp6ks2-LineThrough e1d1k6i0"
                >
                  €0.00
                </span>
              </h3>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EstimateCost - Strong Item render with isDisabledOnOverlay 1`] = `
<DocumentFragment>
  .cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1d9gk6m-OverlayContainer {
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0px;
  height: 120px;
  background-color: #ffffff;
  margin: 0 0 0 260px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  -webkit-transition: bottom 0.3s,box-shadow 0.3s;
  transition: bottom 0.3s,box-shadow 0.3s;
}

.cache-lxo6w7-List {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  list-style: none;
  margin: 0;
  padding: 24px 0;
}

.cache-15sn1rs-OverlayRow {
  min-width: 200px;
  padding: 0 24px;
  border-left: 1px solid #d9dadd;
  border: 0;
}

.cache-15sn1rs-OverlayRow:first-of-type,
.cache-15sn1rs-OverlayRow:last-child {
  border: 0;
}

.cache-4d2pis-Cell-Cell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-gy0d8m {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1odwddd {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-2sj51q-StyledResourceName-StyledResourceName {
  text-align: initial;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-upbfm5-OverlayRow {
  min-width: 200px;
  padding: 0 24px;
  border-left: 1px solid #d9dadd;
}

.cache-upbfm5-OverlayRow:first-of-type,
.cache-upbfm5-OverlayRow:last-child {
  border: 0;
}

.cache-9bqyx6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6qg2f3-sizeStyles {
  vertical-align: middle;
  fill: #641cb3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-6qg2f3-sizeStyles .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.cache-11xji2n-ItemResourceName {
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-12uv9zd-StyledRegular-StyledStrong {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 24px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.cache-l49cjj-StyledTable-spacedChildren {
  width: 100%;
  border: 1px solid #d9dadd;
  border-radius: 4px 4px 0 4px;
}

.cache-l49cjj-StyledTable-spacedChildren>* {
  margin-top: 0;
}

.cache-l49cjj-StyledTable-spacedChildren>*+* {
  margin-top: 16px;
}

.cache-d78yft-PriceCol {
  background-color: #ffffff;
}

.cache-gy9ug9-Title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin: 0;
  font-size: 18px;
  color: #3f4250;
  font-weight: 500;
  padding: 16px;
}

.cache-1c6bnf8-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #641cb3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-right: 8px;
}

.cache-1c6bnf8-sizeStyles-StyledIcon .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.cache-x833v6-StyledPriceCell-Cell-StyledPriceCell-PriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-left: 1px solid #d9dadd;
  background-color: #f9f9fa;
  padding: 0;
}

.cache-1e9mbjr-TimeCell {
  max-width: 200px;
  padding: 16px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  text-align: left;
  float: right;
}

.cache-e8qtir {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-igijr9-CustomTextInput input {
  border-radius: 4px 0 0 4px;
  min-width: 60px;
  border-right: 0;
}

.cache-igijr9-CustomTextInput input:hover,
.cache-igijr9-CustomTextInput input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-right-width: 1px;
  border-right-style: solid;
  border-color: #521094;
}

.cache-igijr9-CustomTextInput input[type='number']::-webkit-inner-spin-button,
.cache-igijr9-CustomTextInput input[type='number']::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-igijr9-CustomTextInput input[type='number'] {
  -moz-appearance: textfield;
}

.cache-bjn8wh {
  position: relative;
}

.cache-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze:hover,
.cache-1ehejze:focus {
  border-color: #792dd4;
}

.cache-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ehejze::-moz-placeholder {
  opacity: 1;
}

.cache-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ehejze::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput {
  width: 100%;
  position: relative;
  box-sizing: border-box;
  height: 40px;
  height: 40px;
}

.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:hover,
.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #521094;
  box-shadow: none;
}

.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:hover,
.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #521094;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-zhj3xq-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  background-color: #ffffff;
  border-color: #d9dadd;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  box-sizing: border-box;
  color: #3f4250;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-zhj3xq-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-zhj3xq-control:focus-within {
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-zhj3xq-control:hover {
  border-color: #792dd4;
}

.cache-1827o3p-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  padding: 2px 8px;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-1827o3p-ValueContainer label {
  display: none;
}

.cache-110bzf5 {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #3f4250;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
  -webkit-transform: translate(0, -8px) scale(0.8);
  -moz-transform: translate(0, -8px) scale(0.8);
  -ms-transform: translate(0, -8px) scale(0.8);
  transform: translate(0, -8px) scale(0.8);
  transform-origin: left;
  padding-left: 8px;
  left: 0;
  top: 2px;
  opacity: 1;
}

.cache-1deka0w-singleValue {
  grid-area: 1/1/2/3;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #3f4250;
  margin-left: 0;
  margin-right: 0;
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1xwier8-inputStyles {
  visibility: visible;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1xwier8-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-dh2bvv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 1px;
  background-color: #d9dadd;
  margin-bottom: 8px;
  margin-top: 8px;
  box-sizing: border-box;
  display: none;
}

.cache-1xc3v61-indicatorContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  color: hsl(0, 0%, 80%);
  padding: 8px;
  box-sizing: border-box;
}

.cache-1xc3v61-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-znppnv {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-znppnv .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-19b723i-Cell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
}

.cache-1meok3w-StyledLeftSide {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 56px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-12tubxd-StyledResourceName {
  text-align: right;
}

.cache-4laor4-StyledRegular-StyledStrong {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.cache-np418x-Cell-StyledPriceCell-PriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-left: 1px solid #d9dadd;
  background-color: #f9f9fa;
}

.cache-1xemy00-StyleNoPriceItem {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

.cache-1k8mic4-EmptyTable {
  margin: 0;
  width: 100%;
}

.cache-wpkagv-EmptyCell {
  width: 538px;
}

.cache-12u8ruk-Cell-TotalPriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-color: #d9dadd;
  border-style: solid;
  border-width: 0 1px 1px 1px;
  border-radius: 0 0 4px 4px;
  min-width: 202px;
  height: 56px;
  background-color: #f1eefc;
}

.cache-yw3y7k-StyledText {
  color: #641cb3;
  font-size: 25px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

<div
    class="cache-1t7ypwa ehpbis70"
  >
    <div
      class="cache-1d9gk6m-OverlayContainer e1p62vjs2"
      data-testid="summary-overlay"
    >
      <ul
        class="cache-lxo6w7-List e1p62vjs1"
      >
        <li
          class="cache-15sn1rs-OverlayRow e1xb5k8j3"
        >
          <div
            class="cache-4d2pis-Cell-Cell e1kzy2rr8"
            width="inherit"
          >
            <div>
              <div
                class="cache-77g8v1 ehpbis70"
              >
                <div
                  class="cache-gy0d8m ehpbis70"
                >
                  <p
                    class="cache-1odwddd e13y3mga0"
                  >
                    Strong
                  </p>
                </div>
              </div>
              <div
                class="cache-2sj51q-StyledResourceName-StyledResourceName e1kzy2rr7"
              />
            </div>
          </div>
        </li>
        <li
          class="cache-upbfm5-OverlayRow e1xb5k8j3"
        >
          <div
            class="cache-9bqyx6 ehpbis70"
          >
            <svg
              class="cache-6qg2f3-sizeStyles e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10 1c-1.716 0-3.408.106-5.07.31A2.213 2.213 0 0 0 3 3.517V16.75A2.25 2.25 0 0 0 5.25 19h9.5A2.25 2.25 0 0 0 17 16.75V3.517c0-1.103-.806-2.068-1.93-2.207A41 41 0 0 0 10 1M5.99 8.75A.75.75 0 0 1 6.74 8h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.417-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.42-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zM12.5 8.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm0 2.166a.75.75 0 0 1 .75.75v2.167a.75.75 0 1 1-1.5 0v-2.167a.75.75 0 0 1 .75-.75M6.75 4a.75.75 0 0 0-.75.75v.5c0 .414.336.75.75.75h6.5a.75.75 0 0 0 .75-.75v-.5a.75.75 0 0 0-.75-.75z"
                fill-rule="evenodd"
              />
            </svg>
            Estimated cost
          </div>
          <div
            class="cache-11xji2n-ItemResourceName e1xb5k8j1"
          >
            <div
              class="e1bhvxf60 cache-12uv9zd-StyledRegular-StyledStrong e1l9k4qo0"
            >
              <span
                class="cache-1bp6ks2-LineThrough e1d1k6i0"
              >
                €0.00/Hour(s)
              </span>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="cache-1odwddd e13y3mga0"
    >
      This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
    </span>
    <div>
      <table
        cellpadding="0"
        cellspacing="0"
        class="cache-l49cjj-StyledTable-spacedChildren e1xb5k8j14"
        data-testid="summary"
      >
        <colgroup>
          <col />
          <col
            class="cache-d78yft-PriceCol e1xb5k8j12"
          />
        </colgroup>
        <thead>
          <tr>
            <th>
              <h3
                class="cache-gy9ug9-Title e1xb5k8j8"
              >
                <svg
                  class="excc3v71 cache-1c6bnf8-sizeStyles-StyledIcon e1gt4cfo0"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 1c-1.716 0-3.408.106-5.07.31A2.213 2.213 0 0 0 3 3.517V16.75A2.25 2.25 0 0 0 5.25 19h9.5A2.25 2.25 0 0 0 17 16.75V3.517c0-1.103-.806-2.068-1.93-2.207A41 41 0 0 0 10 1M5.99 8.75A.75.75 0 0 1 6.74 8h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.417-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.42-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zM12.5 8.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm0 2.166a.75.75 0 0 1 .75.75v2.167a.75.75 0 1 1-1.5 0v-2.167a.75.75 0 0 1 .75-.75M6.75 4a.75.75 0 0 0-.75.75v.5c0 .414.336.75.75.75h6.5a.75.75 0 0 0 .75-.75v-.5a.75.75 0 0 0-.75-.75z"
                    fill-rule="evenodd"
                  />
                </svg>
                Estimated cost
              </h3>
            </th>
            <th
              class="cache-x833v6-StyledPriceCell-Cell-StyledPriceCell-PriceCell excc3v70"
            >
              <div
                class="cache-1e9mbjr-TimeCell e1xb5k8j6"
              >
                <div
                  class="cache-e8qtir e3f5lzv0"
                >
                  <div
                    class="cache-igijr9-CustomTextInput epio27v1"
                  >
                    <div
                      class="cache-bjn8wh el3h3g95"
                    >
                      <input
                        autocomplete="on"
                        class="cache-1ehejze el3h3g92"
                        max="99999"
                        min="1"
                        name="iteration-value"
                        placeholder="0"
                        style="height: 40px;"
                        type="number"
                        value="1"
                      />
                    </div>
                    <div
                      class="cache-1lt3r2p e5hc7t70"
                    >
                      <div
                        class="cache-xbtm7g el3h3g94"
                      />
                    </div>
                  </div>
                  <div
                    class="epio27v0 epio27v0 cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput e11gt5pw4"
                    data-testid="select-input-iteration-unit"
                  >
                    <span
                      class="cache-1f43avz-a11yText-A11yText"
                      id="react-select-4-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="cache-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      class=" cache-zhj3xq-control"
                    >
                      <div
                        class=" cache-1827o3p-ValueContainer"
                      >
                        <label
                          aria-live="assertive"
                          as="label"
                          class="cache-110bzf5 e11gt5pw2"
                          for=":rp:"
                        >
                          Select...
                        </label>
                        <div
                          class=" cache-1deka0w-singleValue"
                        >
                          Hour(s)
                        </div>
                        <div
                          class="cache-1xwier8-inputStyles"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id=":rp:"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" cache-ralm3g-IndicatorsContainer"
                      >
                        <span
                          class=" cache-dh2bvv-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" cache-1xc3v61-indicatorContainer"
                        >
                          <div
                            class="cache-9bqyx6 ehpbis70"
                          >
                            <svg
                              class="cache-znppnv e1gt4cfo0"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <input
                      name="iteration-unit"
                      type="hidden"
                      value="hours"
                    />
                    <div
                      class="cache-1lt3r2p e5hc7t70"
                    >
                      <div
                        class="cache-xbtm7g e11gt5pw3"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="cache-11ls5i6-StyledTr e1xb5k8j4"
          >
            <td
              class="cache-19b723i-Cell e1xb5k8j11"
              width="530px"
            >
              <div
                class="cache-1meok3w-StyledLeftSide e1xb5k8j2"
              >
                <div
                  class="cache-77g8v1 ehpbis70"
                >
                  <div
                    class="cache-gy0d8m ehpbis70"
                  >
                    <p
                      class="cache-1odwddd e13y3mga0"
                    >
                      Strong
                    </p>
                  </div>
                </div>
                <div
                  class="cache-12tubxd-StyledResourceName e1kzy2rr7"
                >
                  <div
                    class="e1bhvxf60 cache-4laor4-StyledRegular-StyledStrong e1l9k4qo0"
                  >
                    This is a strong Item
                  </div>
                </div>
              </div>
            </td>
            <td
              class="cache-np418x-Cell-StyledPriceCell-PriceCell e1kzy2rr1"
            >
              <p
                class="e1kzy2rr0 cache-1xemy00-StyleNoPriceItem e13y3mga0"
              >
                €0.00
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        cellpadding="0"
        cellspacing="0"
        class="cache-1k8mic4-EmptyTable e1xb5k8j9"
      >
        <colgroup>
          <col />
          <col
            class="cache-d78yft-PriceCol e1xb5k8j12"
          />
        </colgroup>
        <tbody>
          <tr>
            <td
              aria-label="control"
              class="cache-wpkagv-EmptyCell e1xb5k8j7"
            />
            <td
              class="cache-12u8ruk-Cell-TotalPriceCell e1xb5k8j10"
            >
              <h3
                class="excc3v73 cache-yw3y7k-StyledText e13y3mga0"
              >
                <span
                  class="cache-1bp6ks2-LineThrough e1d1k6i0"
                >
                  €0.00
                </span>
              </h3>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EstimateCost - Strong Item render with small variant 1`] = `
<DocumentFragment>
  .cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1d9gk6m-OverlayContainer {
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0px;
  height: 120px;
  background-color: #ffffff;
  margin: 0 0 0 260px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  -webkit-transition: bottom 0.3s,box-shadow 0.3s;
  transition: bottom 0.3s,box-shadow 0.3s;
}

.cache-lxo6w7-List {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  list-style: none;
  margin: 0;
  padding: 24px 0;
}

.cache-15sn1rs-OverlayRow {
  min-width: 200px;
  padding: 0 24px;
  border-left: 1px solid #d9dadd;
  border: 0;
}

.cache-15sn1rs-OverlayRow:first-of-type,
.cache-15sn1rs-OverlayRow:last-child {
  border: 0;
}

.cache-4d2pis-Cell-Cell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-gy0d8m {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1odwddd {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-2sj51q-StyledResourceName-StyledResourceName {
  text-align: initial;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-swljnq-StyledRegular-StyledStrong {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.cache-upbfm5-OverlayRow {
  min-width: 200px;
  padding: 0 24px;
  border-left: 1px solid #d9dadd;
}

.cache-upbfm5-OverlayRow:first-of-type,
.cache-upbfm5-OverlayRow:last-child {
  border: 0;
}

.cache-9bqyx6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6qg2f3-sizeStyles {
  vertical-align: middle;
  fill: #641cb3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-6qg2f3-sizeStyles .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.cache-11xji2n-ItemResourceName {
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-12uv9zd-StyledRegular-StyledStrong {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 24px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.cache-l49cjj-StyledTable-spacedChildren {
  width: 100%;
  border: 1px solid #d9dadd;
  border-radius: 4px 4px 0 4px;
}

.cache-l49cjj-StyledTable-spacedChildren>* {
  margin-top: 0;
}

.cache-l49cjj-StyledTable-spacedChildren>*+* {
  margin-top: 16px;
}

.cache-d78yft-PriceCol {
  background-color: #ffffff;
}

.cache-gy9ug9-Title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin: 0;
  font-size: 18px;
  color: #3f4250;
  font-weight: 500;
  padding: 16px;
}

.cache-1c6bnf8-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #641cb3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-right: 8px;
}

.cache-1c6bnf8-sizeStyles-StyledIcon .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.cache-x833v6-StyledPriceCell-Cell-StyledPriceCell-PriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-left: 1px solid #d9dadd;
  background-color: #f9f9fa;
  padding: 0;
}

.cache-1e9mbjr-TimeCell {
  max-width: 200px;
  padding: 16px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  text-align: left;
  float: right;
}

.cache-e8qtir {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-igijr9-CustomTextInput input {
  border-radius: 4px 0 0 4px;
  min-width: 60px;
  border-right: 0;
}

.cache-igijr9-CustomTextInput input:hover,
.cache-igijr9-CustomTextInput input:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-right-width: 1px;
  border-right-style: solid;
  border-color: #521094;
}

.cache-igijr9-CustomTextInput input[type='number']::-webkit-inner-spin-button,
.cache-igijr9-CustomTextInput input[type='number']::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-igijr9-CustomTextInput input[type='number'] {
  -moz-appearance: textfield;
}

.cache-bjn8wh {
  position: relative;
}

.cache-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze:hover,
.cache-1ehejze:focus {
  border-color: #792dd4;
}

.cache-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ehejze::-moz-placeholder {
  opacity: 1;
}

.cache-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ehejze::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput {
  width: 100%;
  position: relative;
  box-sizing: border-box;
  height: 40px;
  height: 40px;
}

.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:hover,
.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #521094;
  box-shadow: none;
}

.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:hover,
.cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #521094;
  box-shadow: none;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-zhj3xq-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  background-color: #ffffff;
  border-color: #d9dadd;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  box-sizing: border-box;
  color: #3f4250;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 40px;
  -webkit-animation: none;
  animation: none;
}

.cache-zhj3xq-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-zhj3xq-control:focus-within {
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-zhj3xq-control:hover {
  border-color: #792dd4;
}

.cache-1827o3p-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  padding: 2px 8px;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-1827o3p-ValueContainer label {
  display: none;
}

.cache-110bzf5 {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #3f4250;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
  -webkit-transform: translate(0, -8px) scale(0.8);
  -moz-transform: translate(0, -8px) scale(0.8);
  -ms-transform: translate(0, -8px) scale(0.8);
  transform: translate(0, -8px) scale(0.8);
  transform-origin: left;
  padding-left: 8px;
  left: 0;
  top: 2px;
  opacity: 1;
}

.cache-1deka0w-singleValue {
  grid-area: 1/1/2/3;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #3f4250;
  margin-left: 0;
  margin-right: 0;
  box-sizing: border-box;
  margin-top: 0;
  padding-left: 0;
}

.cache-1xwier8-inputStyles {
  visibility: visible;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 0;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1xwier8-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-dh2bvv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 1px;
  background-color: #d9dadd;
  margin-bottom: 8px;
  margin-top: 8px;
  box-sizing: border-box;
  display: none;
}

.cache-1xc3v61-indicatorContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  color: hsl(0, 0%, 80%);
  padding: 8px;
  box-sizing: border-box;
}

.cache-1xc3v61-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-znppnv {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-znppnv .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-19b723i-Cell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
}

.cache-1meok3w-StyledLeftSide {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 56px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-12tubxd-StyledResourceName {
  text-align: right;
}

.cache-4laor4-StyledRegular-StyledStrong {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 500px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  margin-right: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  color: #222638;
  font-weight: 500;
  margin-right: 4px;
}

.cache-np418x-Cell-StyledPriceCell-PriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-left: 1px solid #d9dadd;
  background-color: #f9f9fa;
}

.cache-1xemy00-StyleNoPriceItem {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

.cache-1k8mic4-EmptyTable {
  margin: 0;
  width: 100%;
}

.cache-wpkagv-EmptyCell {
  width: 538px;
}

.cache-12u8ruk-Cell-TotalPriceCell {
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  max-width: 530px;
  border-color: #d9dadd;
  border-style: solid;
  border-width: 0 1px 1px 1px;
  border-radius: 0 0 4px 4px;
  min-width: 202px;
  height: 56px;
  background-color: #f1eefc;
}

.cache-yw3y7k-StyledText {
  color: #641cb3;
  font-size: 25px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

<div
    class="cache-1t7ypwa ehpbis70"
  >
    <div
      class="cache-1d9gk6m-OverlayContainer e1p62vjs2"
      data-testid="summary-overlay"
    >
      <ul
        class="cache-lxo6w7-List e1p62vjs1"
      >
        <li
          class="cache-15sn1rs-OverlayRow e1xb5k8j3"
        >
          <div
            class="cache-4d2pis-Cell-Cell e1kzy2rr8"
            width="inherit"
          >
            <div>
              <div
                class="cache-77g8v1 ehpbis70"
              >
                <div
                  class="cache-gy0d8m ehpbis70"
                >
                  <p
                    class="cache-1odwddd e13y3mga0"
                  >
                    Strong
                  </p>
                </div>
              </div>
              <div
                class="cache-2sj51q-StyledResourceName-StyledResourceName e1kzy2rr7"
              >
                <div
                  class="e1bhvxf60 cache-swljnq-StyledRegular-StyledStrong e1l9k4qo0"
                >
                  This is a strong Item
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class="cache-upbfm5-OverlayRow e1xb5k8j3"
        >
          <div
            class="cache-9bqyx6 ehpbis70"
          >
            <svg
              class="cache-6qg2f3-sizeStyles e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10 1c-1.716 0-3.408.106-5.07.31A2.213 2.213 0 0 0 3 3.517V16.75A2.25 2.25 0 0 0 5.25 19h9.5A2.25 2.25 0 0 0 17 16.75V3.517c0-1.103-.806-2.068-1.93-2.207A41 41 0 0 0 10 1M5.99 8.75A.75.75 0 0 1 6.74 8h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.417-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.42-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zM12.5 8.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm0 2.166a.75.75 0 0 1 .75.75v2.167a.75.75 0 1 1-1.5 0v-2.167a.75.75 0 0 1 .75-.75M6.75 4a.75.75 0 0 0-.75.75v.5c0 .414.336.75.75.75h6.5a.75.75 0 0 0 .75-.75v-.5a.75.75 0 0 0-.75-.75z"
                fill-rule="evenodd"
              />
            </svg>
            Estimated cost
          </div>
          <div
            class="cache-11xji2n-ItemResourceName e1xb5k8j1"
          >
            <div
              class="e1bhvxf60 cache-12uv9zd-StyledRegular-StyledStrong e1l9k4qo0"
            >
              <span
                class="cache-1bp6ks2-LineThrough e1d1k6i0"
              >
                €0.00/Hour(s)
              </span>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="cache-1odwddd e13y3mga0"
    >
      This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
    </span>
    <div>
      <table
        cellpadding="0"
        cellspacing="0"
        class="cache-l49cjj-StyledTable-spacedChildren e1xb5k8j14"
        data-testid="summary"
      >
        <colgroup>
          <col />
          <col
            class="cache-d78yft-PriceCol e1xb5k8j12"
          />
        </colgroup>
        <thead>
          <tr>
            <th>
              <h3
                class="cache-gy9ug9-Title e1xb5k8j8"
              >
                <svg
                  class="excc3v71 cache-1c6bnf8-sizeStyles-StyledIcon e1gt4cfo0"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 1c-1.716 0-3.408.106-5.07.31A2.213 2.213 0 0 0 3 3.517V16.75A2.25 2.25 0 0 0 5.25 19h9.5A2.25 2.25 0 0 0 17 16.75V3.517c0-1.103-.806-2.068-1.93-2.207A41 41 0 0 0 10 1M5.99 8.75A.75.75 0 0 1 6.74 8h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.417-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm1.42-5.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm-.75 2.916a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zM12.5 8.75a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75h-.01a.75.75 0 0 1-.75-.75zm.75 1.417a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75v-.01a.75.75 0 0 0-.75-.75zm0 2.166a.75.75 0 0 1 .75.75v2.167a.75.75 0 1 1-1.5 0v-2.167a.75.75 0 0 1 .75-.75M6.75 4a.75.75 0 0 0-.75.75v.5c0 .414.336.75.75.75h6.5a.75.75 0 0 0 .75-.75v-.5a.75.75 0 0 0-.75-.75z"
                    fill-rule="evenodd"
                  />
                </svg>
                Estimated cost
              </h3>
            </th>
            <th
              class="cache-x833v6-StyledPriceCell-Cell-StyledPriceCell-PriceCell excc3v70"
            >
              <div
                class="cache-1e9mbjr-TimeCell e1xb5k8j6"
              >
                <div
                  class="cache-e8qtir e3f5lzv0"
                >
                  <div
                    class="cache-igijr9-CustomTextInput epio27v1"
                  >
                    <div
                      class="cache-bjn8wh el3h3g95"
                    >
                      <input
                        autocomplete="on"
                        class="cache-1ehejze el3h3g92"
                        max="99999"
                        min="1"
                        name="iteration-value"
                        placeholder="0"
                        style="height: 40px;"
                        type="number"
                        value="1"
                      />
                    </div>
                    <div
                      class="cache-1lt3r2p e5hc7t70"
                    >
                      <div
                        class="cache-xbtm7g el3h3g94"
                      />
                    </div>
                  </div>
                  <div
                    class="epio27v0 epio27v0 cache-1r22via-container-StyledContainer-CustomSelectInput-CustomSelectInput e11gt5pw4"
                    data-testid="select-input-iteration-unit"
                  >
                    <span
                      class="cache-1f43avz-a11yText-A11yText"
                      id="react-select-3-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="cache-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      class=" cache-zhj3xq-control"
                    >
                      <div
                        class=" cache-1827o3p-ValueContainer"
                      >
                        <label
                          aria-live="assertive"
                          as="label"
                          class="cache-110bzf5 e11gt5pw2"
                          for=":re:"
                        >
                          Select...
                        </label>
                        <div
                          class=" cache-1deka0w-singleValue"
                        >
                          Hour(s)
                        </div>
                        <div
                          class="cache-1xwier8-inputStyles"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id=":re:"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" cache-ralm3g-IndicatorsContainer"
                      >
                        <span
                          class=" cache-dh2bvv-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" cache-1xc3v61-indicatorContainer"
                        >
                          <div
                            class="cache-9bqyx6 ehpbis70"
                          >
                            <svg
                              class="cache-znppnv e1gt4cfo0"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <input
                      name="iteration-unit"
                      type="hidden"
                      value="hours"
                    />
                    <div
                      class="cache-1lt3r2p e5hc7t70"
                    >
                      <div
                        class="cache-xbtm7g e11gt5pw3"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="cache-11ls5i6-StyledTr e1xb5k8j4"
          >
            <td
              class="cache-19b723i-Cell e1xb5k8j11"
              width="530px"
            >
              <div
                class="cache-1meok3w-StyledLeftSide e1xb5k8j2"
              >
                <div
                  class="cache-77g8v1 ehpbis70"
                >
                  <div
                    class="cache-gy0d8m ehpbis70"
                  >
                    <p
                      class="cache-1odwddd e13y3mga0"
                    >
                      Strong
                    </p>
                  </div>
                </div>
                <div
                  class="cache-12tubxd-StyledResourceName e1kzy2rr7"
                >
                  <div
                    class="e1bhvxf60 cache-4laor4-StyledRegular-StyledStrong e1l9k4qo0"
                  >
                    This is a strong Item
                  </div>
                </div>
              </div>
            </td>
            <td
              class="cache-np418x-Cell-StyledPriceCell-PriceCell e1kzy2rr1"
            >
              <p
                class="e1kzy2rr0 cache-1xemy00-StyleNoPriceItem e13y3mga0"
              >
                €0.00
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        cellpadding="0"
        cellspacing="0"
        class="cache-1k8mic4-EmptyTable e1xb5k8j9"
      >
        <colgroup>
          <col />
          <col
            class="cache-d78yft-PriceCol e1xb5k8j12"
          />
        </colgroup>
        <tbody>
          <tr>
            <td
              aria-label="control"
              class="cache-wpkagv-EmptyCell e1xb5k8j7"
            />
            <td
              class="cache-12u8ruk-Cell-TotalPriceCell e1xb5k8j10"
            >
              <h3
                class="excc3v73 cache-yw3y7k-StyledText e13y3mga0"
              >
                <span
                  class="cache-1bp6ks2-LineThrough e1d1k6i0"
                >
                  €0.00
                </span>
              </h3>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
